tests/fail/namespace-def3.dit
import A from 'tests/dits/space1.dit';

A {}